--- a/e2.md
+++ b/e2.md
@@ -1,28 +1,1 @@
-Unenrollment error: error: column "updated_at" of relation "enrollments" does not exist
-    at async handler (pages\api\courses\[id]\unenroll.js:75:12)
-  73 |
-  74 |             // Update enrollment status to cancelled instead of deleting
-> 75 |             await client.query(
-     |            ^
-  76 |                 'UPDATE enrollments SET status = $1, updated_at = CURRENT_TIMESTAMP WHERE id = $2',
-  77 |                 ['cancelled', enrollment.id]
-  78 |             ); {
-  length: 136,
-  severity: 'ERROR',
-  code: '42703',
-  detail: undefined,
-  hint: undefined,
-  position: '37',
-  internalPosition: undefined,
-  internalQuery: undefined,
-  where: undefined,
-  schema: undefined,
-  table: undefined,
-  column: undefined,
-  dataType: undefined,
-  constraint: undefined,
-  file: 'analyze.c',
-  line: '2528',
-  routine: 'transformUpdateTargetList'
-}
- POST /api/courses/10/unenroll 500 in 5269ms
+In course: in "details-content" which is in json is in english "teachers" which apear when I apply to a course.
